--- a/electronics_enduser/src/app/globals.css
+++ b/electronics_enduser/src/app/globals.css
@@ -130,6 +130,15 @@ input[type="number"] {
 .Toastify__toast.Toastify__toast--success svg{
   fill: #007ae3
 }
+hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.frm-login input{
+  max-width: 280px;
+}
 @media (min-width: 992px) {
   .navbar-expand-lg .navbar-collapse {
     display: -ms-flexbox !important;
